<resources>
    <string name="app_name">flip-concept</string>

    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>

    <string name="sign_up_or_label"> Sign Up </string>
    <string name="log_in_or_label"> Log In </string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>

    <string name="or"> Or </string>
</resources>
