<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_sign_up"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="60sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#fafafa"
        android:text="@string/sign_up_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:background="@drawable/rounded_right"
        tools:text="Or  Log In"
        android:textSize="18sp"
        android:padding="@dimen/switcher_padding"
        android:paddingLeft="@dimen/extra_left_padding"
        android:paddingStart="@dimen/extra_left_padding"
        android:translationX="@dimen/extra_translation_x_left"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#fafafa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/controller"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />

    <ImageView
        android:src="@drawable/facebook"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:id="@+id/first"
        app:layout_constraintRight_toLeftOf="@+id/second"
        app:layout_constraintBottom_toBottomOf="@+id/controller"
        android:layout_marginRight="@dimen/option_margin"
        android:layout_marginEnd="@dimen/option_margin"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@+id/controller"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:src="@drawable/linkedin"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:id="@+id/second"
        android:layout_marginRight="@dimen/option_margin"
        android:layout_marginEnd="@dimen/option_margin"
        app:layout_constraintLeft_toRightOf="@+id/first"
        app:layout_constraintRight_toLeftOf="@+id/last"
        app:layout_constraintTop_toTopOf="@+id/first"
        app:layout_constraintBottom_toBottomOf="@+id/first"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:src="@drawable/twitter"
        android:id="@+id/last"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        app:layout_constraintLeft_toRightOf="@+id/second"
        app:layout_constraintBottom_toBottomOf="@+id/second"
        app:layout_constraintTop_toTopOf="@+id/second"
        android:layout_marginEnd="@dimen/option_margin"
        android:layout_marginRight="@dimen/option_margin"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="48dp"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/focus_hider"
        android:focusable="true"
        android:src="@drawable/log"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="64dp"
        android:layout_height="64dp"/>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.TextInputLayout"
        android:id="@+id/email_input"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/focus_hider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            style="@style/Widget.TextEdit"
            android:id="@+id/email_input_edit"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.TextInputLayout"
        android:id="@+id/password_input"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            style="@style/Widget.TextEdit"
            android:id="@+id/password_input_edit"
            android:hint="@string/password_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.TextInputLayout"
        android:id="@+id/confirm_password_input"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            style="@style/Widget.TextEdit"
            android:id="@+id/confirm_password_input_edit"
            android:hint="@string/confirm_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>