<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/color_log_in"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="60sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#fafafa"
        android:text="@string/log_in_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:background="@drawable/rounded_left"
        android:text="@string/sign_up_or_label"
        android:padding="@dimen/switcher_padding"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#fafafa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/controller"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:src="@drawable/facebook"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:id="@+id/first"
        app:layout_constraintRight_toLeftOf="@+id/second"
        app:layout_constraintBottom_toBottomOf="@+id/controller"
        android:layout_marginRight="@dimen/option_margin"
        android:layout_marginEnd="@dimen/option_margin"
        android:layout_marginLeft="@dimen/option_margin"
        android:layout_marginStart="@dimen/option_margin"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/controller" />

    <ImageView
        android:src="@drawable/linkedin"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:id="@+id/second"
        android:layout_marginRight="@dimen/option_margin"
        android:layout_marginEnd="@dimen/option_margin"
        app:layout_constraintLeft_toRightOf="@+id/first"
        app:layout_constraintRight_toLeftOf="@+id/last"
        app:layout_constraintTop_toTopOf="@+id/first"
        app:layout_constraintBottom_toBottomOf="@+id/first"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:src="@drawable/twitter"
        android:id="@+id/last"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        app:layout_constraintLeft_toRightOf="@+id/second"
        app:layout_constraintBottom_toBottomOf="@+id/second"
        app:layout_constraintTop_toTopOf="@+id/second"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/controller"
        android:layout_marginRight="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="48dp"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/focus_hider"
        android:focusable="true"
        android:src="@drawable/log"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="64dp"
        android:layout_height="64dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="220dp"
        android:id="@+id/email_input"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/focus_hider"
        android:layout_marginTop="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:padding="16dp"
            android:textColorHighlight="#fafafa"
            android:textStyle="bold"
            android:background="@drawable/input_state"
            android:layout_height="match_parent"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF"
        android:id="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:padding="16dp"
            android:textStyle="bold"
            android:background="@drawable/input_state"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="Forgot Password?"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        android:layout_marginTop="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>